--- a/projects.json
+++ b/projects.json
@@ -10,7 +10,7 @@
         {
           "name": "Fast Pizza",
           "summary": "Aplicación creada con React como parte de un curso para gestionar pedidos de pizza de manera rápida y eficiente. Utiliza Redux para el state management asi como Tailwind para los estilos. Creado siguiendo el curso de Jonas Schmedtmann",
-          "url": "fastpizza-cursoreact.vercel.app",
+          "url": "https://fastpizza-cursoreact.vercel.app",
           "images": [
             "project_images/fastpizza1.webp",
             "project_images/fastpizza2.webp",
@@ -20,7 +20,7 @@
         {
           "name": "The Wild Oasis",
           "summary": "Proyecto desarrollado como parte de un curso de React, usando Supabase. Uso de Styled-Components, React-Query, React-Router-Dom, etc.Explora la creación de componentes dinámicos y gestión de estado en una aplicación moderna de cabañas. Componentes de dashboard creados de cero, darkmode/lightmode ... Creado siguiendo el curso de Jonas Schmedtmann",
-          "url": "wildoasis-cursoreact.vercel.app",
+          "url": "https://wildoasis-cursoreact.vercel.app",
           "images": [
             "project_images/wildoasis3.webp",
             "project_images/wildoasis2.webp",
@@ -35,7 +35,7 @@
         {
           "name": "Natours",
           "summary": "Proyecto desarrollado como parte del aprendizaje de Node.js. Uso de Express, MongoDB, Mongoose, Pug, Stripe, Mailtrap, Mapbox, Nodemailer, JWT, Bcrypt, etc. Creado siguiendo el curso de Jonas Schmedtmann",
-          "url": "https://www.google.com",
+          "url": "https://natours-cursonode.onrender.com/",
           "images": [
             "project_images/natours1.webp",
             "project_images/natours2.webp",
