fix images + readme

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   "name": "samU13",
   "github": "https://github.com/samU13",
   "email": "samu13lop@gmail.com",
-  "image_header": "project_images/header2-nobg.webp",
+  "image_header": "project_images/header.webp",
   "works": [
     {
       "lenguage": "react",
