package.json update

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "tiny-showcase",
   "type": "module",
   "version": "0.0.1",
+  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "postinstall": "sharp --install"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
