--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro",
-    "postinstall": "sharp --install"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
