--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tiny-showcase",
   "type": "module",
   "version": "0.0.1",
-  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -31,6 +30,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "wrangler": "3.114.0"
   }
 }
