--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiny-showcase",
+  "name": "tiny-show",
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@9.10.0",
